<resources>
    <string name="app_name">VinilosMobileApp</string>

    <!-- Home screen -->title_artists
    <string name="title_vinilos">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_profile">Perfil</string>

    <!-- Album screen -->
    <string name="album_create_new">Crear Nuevo Álbum</string>
    <string name="album_detail">Detalles del Álbum</string>


    <!-- Artist screen -->
    <string name="artist_detail">Detalles del Artista</string>
    <string name="artist_no_favorites">No tienes artistas favoritos :c</string>


    <!-- Error Handler -->
    <string name="error_connection">Error de conexión\n\n%1$s</string>
    <string name="error_create_album">No hay álbumes disponibles\n\nCrea uno nuevo.</string>
    <string name="error_create_artist">No hay artistas disponibles\n\nCrea uno nuevo.</string>
    <string name="error_retry">Reintentar</string>
    <string name="lbum">Álbum</string>
    <string name="no_hay_lbums_que_mostrar">No hay álbums que mostrar</string>
    <string name="comentario">Comentario</string>
    <string name="selecciona_un_usuario">Selecciona un usuario</string>
    <string name="no_hay_coleccionistas_registrados_n_el_comentario_ser_an_nimo">No hay coleccionistas registrados,\n el comentario será anónimo.</string>
    <string name="premio">Premio</string>
    <string name="fecha_de_premiaci_n">Fecha de premiación</string>
    <string name="nombre_de_la_canci_n">Nombre de la canción</string>
    <string name="duraci_n_opcional">Duración (opcional)</string>
    <string name="pantalla_de_coleccionistas">Pantalla de Coleccionistas</string>
    <string name="nombre_del_album">Nombre del Album</string>
    <string name="a_o_de_lanzamiento">Año de Lanzamiento</string>
    <string name="selecciona_un_g_nero">Selecciona un género</string>
    <string name="selecciona_un_sello_discogr_fico">Selecciona un sello discográfico</string>
    <string name="descripci_n_opcional">Descripción (opcional)</string>
    <string name="imagen_del_lbum">Imagen del Álbum</string>
    <string name="toca_para_subir_una_imagen">Toca para subir una imagen</string>
    <string name="png_jpg_hasta_5mb">PNG, JPG hasta 5MB</string>
    <string name="lista_de_canciones">Lista de Canciones</string>
    <string name="agregar_canci_n">Agregar Canción</string>
    <string name="agregar_comentario">Agregar Comentario</string>
    <string name="comentarios_iniciales">Comentarios Iniciales</string>
    <string name="crear_lbum">Crear Álbum</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="descripci_n">Descripción</string>
    <string name="toca_para_subir_foto_de_perfil">Toca para subir foto de perfil</string>
    <string name="lista_de_lbumes">Lista de Álbumes</string>
    <string name="agregar_lbum">Agregar Álbum</string>
    <string name="lista_de_premios">Lista de Premios</string>
    <string name="agregar_premio">Agregar Premio</string>
    <string name="crear_artista">Crear Artista</string>
    <string name="comentarios_de_usuarios">Comentarios de usuarios</string>
    <string name="a_n_no_hay_comentarios_disponibles">Aún no hay comentarios disponibles.</string>
    <string name="error_de_conexi_n">Error de conexión</string>
    <string name="reintentar">Reintentar</string>
    <string name="rock_band_new_york">Rock Band · New York</string>
    <string name="lbumes">Álbumes</string>
    <string name="grammy_awards">Grammy Awards</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="no_hay_lbumes_disponibles">No hay álbumes disponibles</string>
    <string name="premios">Premios</string>
    <string name="no_hay_premios_asignados">No hay premios asignados</string>
    <string name="buscar_lbumes">Buscar álbumes...</string>
    <string name="pantalla_de_perfil">Pantalla de Perfil</string>
    <string name="album_name">Album Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="usuario">Usuario</string>
    <string name="duraci_n">Duración</string>
    <string name="imagen_que_indica_error_al_mostrar_el_contenido_de_la_p_gina">Imagen que indica error al mostrar el contenido de la página</string>
    <string name="imagen_que_muestra_la_imagen_del_artista_o_grupo_musical">Imagen que muestra la imagen del artista o grupo musical</string>
    <string name="imagen_que_muestra_la_foto_de_portada_del_album_corespondiente">imagen que muestra la foto de portada del album corespondiente</string>
    <string name="imagen_de_referencia_para_indicar_que_se_puede_hacer_click_para_subir_una_imagen_de_artista">Imagen de referencia para indicar que se puede hacer click para subir una imagen de artista</string>
    <string name="icono_de_estrella_que_indica_lista_de_favoritos">Icono de estrella, que indica lista de favoritos</string>
    <string name="bot_n_que_indica_que_se_puede_agregar_un_artista_nuevo_con_el_icono_de">Botón que indica que se puede agregar un artista nuevo con el icono de +</string>
    <string name="bot_n_que_indica_que_se_puede_filtrar_los_artistas_favoritos_con_el_icono_de_una_estrella">Botón que indica que se puede filtrar los artistas favoritos, con el icono de una estrella</string>
    <string name="imagen_que_previsualiza_la_portada_del_album">Imagen que previsualiza la portada del album</string>
    <string name="imagen_que_muestra_la_foto_de_perfil_del_usuario">imagen que muestra la foto de perfil del usuario</string>
    <string name="selecciona_el_a_o_de_lanzamiento">Selecciona el año de lanzamiento</string>
    <string name="lbum_creado_exitosamente">Álbum creado exitosamente</string>
    <string name="error_al_crear_el_lbum">Error al crear el álbum</string>
    <string name="este_campo_es_obligatorio">Este campo es obligatorio</string>
    <string name="validaci_n_fallida_campos_obligatorios_vac_os">❌ Validación fallida: Campos obligatorios vacíos</string>
    <string name="lbum_creado_desde_la_app_m_vil">Álbum creado desde la app móvil.</string>
    <string name="error_de_red_al_crear_el_lbum">Error de red al crear el álbum</string>
    <string name="_3_30_min">3:30 min</string>
    <string name="lbum_creado_pero_hubo_errores_al_agregar_contenido">Álbum creado, pero hubo errores al agregar contenido</string>
    <string name="lbum_y_contenido_creado_exitosamente">Álbum y contenido creado exitosamente</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="el_comentario_es_obligatorio">El comentario es obligatorio</string>
    <string name="an_nimo">Anónimo</string>
    <string name="artista_creado">Artista creado</string>
    <string name="error_al_crear_artista">Error al crear artista</string>
    <string name="nombre_obligatorio">Nombre obligatorio</string>
    <string name="fecha_de_nacimiento_requerida">Fecha de nacimiento requerida</string>
    <string name="descripci_n_requerida">Descripción requerida</string>
    <string name="artistas_favoritos">Artistas Favoritos</string>
    <string name="todos_los_artistas">Todos los Artistas</string>
    <string name="id_de_lbum_no_v_lido">ID de álbum no válido</string>
    <string name="guest">Guest: %1$s</string>
    <string name="nuevo_comentario">Nuevo comentario</string>
    <string name="comentario_obligatorio">Comentario obligatorio</string>
    <string name="comentario_agregado_correctamente">Comentario agregado correctamente</string>
    <string name="error_al_agregar_comentario">Error al agregar comentario</string>
    <string name="error_de_red_al_agregar_comentario">Error de red al agregar comentario</string>
    <string name="_1234567890">1234567890</string>
    <string name="error_creando_guest">Error creando guest</string>
    <string name="error_de_red_creando_guest">Error de red creando guest</string>

</resources>
