<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerImageViewAlbumCover"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:shimmer_auto_start="true"
            app:shimmer_duration="1500">

            <ImageView
                android:id="@+id/imageViewAlbumCover"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/imagen_que_muestra_la_foto_de_portada_del_album_corespondiente"
                android:scaleType="centerCrop" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/textViewAlbumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/album_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_name" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
