<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Comentario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comentario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Dropdown para seleccionar usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAuthorLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/selecciona_un_usuario">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Hint para cuando no haya collectors -->
    <TextView
        android:id="@+id/guest_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_hay_coleccionistas_registrados_n_el_comentario_ser_an_nimo"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible" />
</LinearLayout>
